# libcomm

./: Makefile.am  Makefile.in  README  config.h.in  config.h.in~  configure  configure.ac  libcomm.sln
autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
libcomm/: Makefile.am  Makefile.in  UTypes.h  bclog.c  bclog.h  bctime.c  bctime.h  conf.c  conf.h  convert_util.c  convert_util.h  csocket.c  csocket.h  dtype.h  libcom.c  libcom.txt  libcomm.c  libcomm.vcxproj  libcomm.vcxproj.filters  linklist.c  linklist.h  sfline.c  sfline.h  sha1.h  taskdata.c  taskdata.h  thpool.c  thpool.h  udp_client.c  udp_server.c  udpcs.c  websocket.c  websocket.h
libcomm/.deps/: bclog.Po  bctime.Po  conf.Po  csocket.Po  libcom.Po  linklist.Po  sfline.Po  taskdata.Po  thpool.Po  websocket.Po
libcomm/x64/Release/libcomm.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  libcomm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Release/: libcom.txt
